kubernetes/overlays/homelab/infrastructure/strimzi-kafka-operator/resources/cnp-strimzi-cluster-operator.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: strimzi-cluster-operator
  namespace: kafka
  labels:
    app.kubernetes.io/name: strimzi-kafka-operator
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
spec:
  endpointSelector:
    matchLabels:
      name: strimzi-cluster-operator
      strimzi.io/kind: cluster-operator
  ingress:
    # kubelet liveness/readiness probes
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # Prometheus metrics scraping
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
